Tratamento na responsividade com flexbox

--- a/public/produtos.css
+++ b/public/produtos.css
@@ -1,48 +1,25 @@
-.tituloPrimeiro{
-    background-color: rgb(34, 30, 30);
-    padding:30px 0;
-    font-style: oblique;
-}
-#logo{
-    width: 400px;
-}
-.caixa{
-    position: relative;
-    width: 940px;
-    margin: 0 auto;
-}
-nav{
-    position: absolute;
-    top: 220px;
-    right: 0;
-}
-nav li{
-    display: inline;
-    margin: 0 0 0 200px;
-  
-}
-nav a{
-    text-transform: uppercase;
-    color: rgb(250, 242, 242);
-    font-weight: bold;
-    font-size: 22px;
-    text-decoration: none;
-    position: absolute;
-}
 .listaProdutos{
-    width: 940px;
-    margin: 0 auto;
+    width: 100%;
+    padding: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
     text-align: center;
-    padding: 100px 0;
 
 }
+
+.listaProdutos ul {
+    flex: 1;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: start;
+    align-items: center;
+}
 .listaProdutos li{
-    display: inline-block;
-    text-align: center;
-    width: 30%;
+    margin: 20px;
+    width: 250px;
     vertical-align: top;
-    margin: 0 1.5%;
-    padding: 30px 20px;
     box-sizing: border-box;
     border: 2px solid black;
     border-top-width: 10px;
@@ -58,10 +35,7 @@ nav a{
 .listaProdutos li:active{
     border-color: lightcoral;
 }
-nav a:hover {
-    color:#C78;
-    text-decoration: underline;
-}
+
 .listaProdutos li:hover h2{
     font-size: 30px;
 }
@@ -83,36 +57,12 @@ nav a:hover {
 
 }
 .imgProduto{
-    width: 200px;
-
-}
-footer{
-    text-align: center;
-    background:url("imagens/logo.png");
-    padding:40px 0;
-    opacity: 0.7;
-    background-repeat: round;
-
+    width: 100%;
+    padding: 20px;
 }
 
 .copyright{
     color:white;
     font-size: 13px;
     margin: 20px 0 0;
-}
-@media screen and (max-width:480px){
-    footer, header{
-        width: 950px;
-        margin: 0;
-    }
-    h1{
-        text-align: center;
-        
-    }
-
-    nav{
-        position: static;
-    }
-
-   
 }
