--- a/public/contato.css
+++ b/public/contato.css
@@ -1,3 +1,7 @@
+
+.contatoList {
+    flex-direction: row;
+}
 .contatoList{
     width:940px;
     margin:0 auto;
@@ -88,22 +92,26 @@ tr td{
 .fa {
     padding: 20px;
     font-size: 30px;
-    width: 50px;
+    width: 65px;
     text-align: center;
     text-decoration: none;
-  }
-  
-  /* Add a hover effect if you want */
-  .fa:hover {
-    opacity: 0.7;
-  }
+}
 
-  .fa-facebook {
+  /* Add a hover effect if you want */
+.fa:hover {
+    opacity: 0.7;
+}
+
+.fa-whatsapp {
+    background: forestgreen;
+    color: white;
+}
+
+.fa-facebook {
     background: #3B5998;
     color: white;
-  }
-  .fa-instagram {
+}
+.fa-instagram {
     background: #125688;
     color: white;
-  }
-  
+}
